Fix Shop box size on tablet and mobile devices

--- a/ktc-web/css/mobile-style.css
+++ b/ktc-web/css/mobile-style.css
@@ -681,6 +681,9 @@
     margin-top: 0;
     font-size: 3.7vw;
   }
+  section#section-flexi-shops .box-full-img {
+    min-height: 250px;
+  }
 
   #section-flexi-promotions .slide-flexi-promotions .item .slide-title {
     padding-top: 20px;
